fix:Reduce font sizes and spacings

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -44,33 +44,37 @@ h6 {
   overflow-wrap: break-word;
 }
 
-body {
-   @include mq(small) {
-      height: auto;
-   }
-}
-
 #app {
    position: relative;
-   @include width-height(100%, 100vh);
-   min-height: 100vh;
-   background-color: var(--blue-100);
-
-   @include mq(small) {
-      height: auto;
-   }
+   @include width-height(100%, 100%);
+   display: flex;
+   flex-direction: column;
 }
 
 .main-wrapper {
-   @include width-height(100%, 100%);
-   min-height: 100vh;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+   flex: 1;
+   background-color: var(--blue-100);
    background-image: url('/images/bg-layer.webp');
    background-repeat: no-repeat;
    background-size: 100% auto; 
    background-position: bottom center; 
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+}
+
+.container {
+   // height: 100%;
+   padding-top: 11rem;
+
+   @include mq(medium) {
+      padding-top: 9rem;
+   }
+
+   @include mq(small) {
+      padding-top: 7rem;
+   }
 }
 
 button,
@@ -102,8 +106,18 @@ a {
    text-transform: uppercase;
    color: var(--white-100);
 
+   @include mq(large) {
+      font-size: 6rem;
+      letter-spacing: 0.06rem;
+    }
+
+   @include mq(medium) {
+      font-size: 5rem;
+      letter-spacing: 0.05rem;
+   }
+
    @include mq(small) {
-      font-size: 3.54375rem;
+      font-size: 3rem;
       letter-spacing: 0.03544rem;
    }
 }
@@ -117,6 +131,36 @@ a {
    letter-spacing: 0.03563rem;
    text-transform: uppercase;
    color: var(--white-100);
+
+   @include mq(large) {
+      font-size: 2.75rem; 
+      letter-spacing: 0.025rem;
+   }
+
+   @include mq(medium) {
+      font-size: 2rem; 
+      letter-spacing: 0.02rem;
+   }
+
+   @include mq(small) {
+      font-size: 1.25rem;
+      letter-spacing: 0.0125rem;
+   }
+}
+
+.header-m {
+   font-family: "Montserrat";
+   font-size: 3rem;
+   font-style: normal;
+   font-weight: 900;
+   line-height: 110%; /* 3.91875rem */
+   letter-spacing: 0.03rem;   text-transform: uppercase;
+   color: var(--white-100);
+
+   @include mq(large) {
+      font-size: 2rem; 
+      letter-spacing: 0.02rem;
+   }
 
    @include mq(small) {
       font-size: 1.25rem;
